# wDoomEd

./: CMakeLists.txt  TODO
src/: CMakeLists.txt  app.cpp  app.h  canvas.cpp  canvas.h  main_frame.cpp  main_frame.h  map_editor.cpp  map_editor.h  math_util.cpp  math_util.h  polygon_2d.cpp  polygon_2d.h  properties_dialog.cpp  properties_dialog.h  texture.cpp  texture.h  validator_cb_bit.h  validator_combo.h  w_wad.cpp  w_wad.h  wad.cpp  wad.h
